[package]
name = "block-chain"
version = "0.1.0"
authors = ["gauravsaini"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.16"
serde = { version = "1.0.111", features = ["derive"]}
sha2 = "0.7.0"
serde_json = "1.0.55"

